@@ -130,6 +130,11 @@ idle-timeout=30
 # after high load times
 max-jobs=1000
 
+# max-age is the threshold for discarding too old jobs. When a new job is older
+# than this amount of seconds it will not be executed and just discarded. Set to
+# zero to disable this check.
+#max-age=0
+
 # defines the rate of spawned worker per second as long
 # as there are jobs waiting
 spawn-rate=1
