@@ -118,6 +118,11 @@ idle-timeout=30
 # worker will terminate after this amount of jobs done
 max-jobs=50
 
+# max-age is the threshold for discarding too old jobs. When a new job is older
+# than this amount of seconds it will not be executed and just discarded. Set to
+# zero to disable this check.
+#max-age=0
+
 # defined the rate of spawed worker per second as long
 # as there are jobs waiting
 spawn-rate=1
