@@ -2,6 +2,8 @@ This file documents the revision history for mod_gearman.
 
 1.2.6  Mon Mar 12 15:14:21 CET 2012
           - set worker queue by custom variable
+          - disabled default max job age check
+          - added docs in sample config about max-age
           - added usefull message when epn plugin does not call exit()
           - fixed "Could Not Start Check In Time" problem
 
